@@ -4,10 +4,16 @@ test_name 'svckill'
 
 describe 'Kill Unmanaged Services' do
   hosts.each do |host|
-    context 'default parameters' do
+    hieradata = <<-EOM
+---
+
+svckill::mode: 'enforcing'
+EOM
+    context 'with mode=enforcing' do
+      set_hieradata_on(host, hieradata, 'default')
+
       it 'should not kill the network' do
         result = apply_manifest_on(host,'include "svckill"', :catch_failures => true).stdout
-
         expect(result).to_not match(/stopped.*'network/)
       end
 
@@ -15,7 +21,6 @@ describe 'Kill Unmanaged Services' do
         on(host, 'puppet resource package dnsmasq ensure=installed')
         on(host, 'puppet resource service dnsmasq ensure=running')
         result = apply_manifest_on(host, 'include "svckill"', :catch_failures => true).stdout
-
         expect(result).to match(/stopped.*'dnsmasq/)
       end
 
@@ -28,7 +33,6 @@ describe 'Kill Unmanaged Services' do
         EOS
 
         result = apply_manifest_on(host, manifest, :catch_failures => true).stdout
-
         expect(result).to_not match(/stopped.*'dnsmasq/)
       end
     end
@@ -37,7 +41,8 @@ describe 'Kill Unmanaged Services' do
       it 'should not kill Dnsmasq' do
         manifest = <<-EOS
           class { 'svckill':
-            ignore => ['dnsmasq']
+            ignore => ['dnsmasq'],
+            mode   => 'enforcing'
           }
 
           package { 'dnsmasq': ensure => 'present' }
@@ -45,7 +50,6 @@ describe 'Kill Unmanaged Services' do
 
         on(host, 'puppet resource service dnsmasq ensure=running')
         result = apply_manifest_on(host, manifest, :catch_failures => true).stdout
-
         expect(result).to_not match(/stopped.*'dnsmasq/)
       end
     end
@@ -56,7 +60,8 @@ describe 'Kill Unmanaged Services' do
 
         manifest = <<-EOS
           class { 'svckill':
-            ignore_files => ['#{ignore_file}']
+            ignore_files => ['#{ignore_file}'],
+            mode         => 'enforcing'
           }
 
           package { 'dnsmasq': ensure => 'present' }
@@ -65,7 +70,6 @@ describe 'Kill Unmanaged Services' do
         create_remote_file(host, ignore_file, "dnsmasq\n")
         on(host, 'puppet resource service dnsmasq ensure=running')
         result = apply_manifest_on(host, manifest, :catch_failures => true).stdout
-
         expect(result).to_not match(/stopped.*'dnsmasq/)
       end
     end
@@ -78,7 +82,6 @@ describe 'Kill Unmanaged Services' do
 
         on(host, 'puppet resource service dnsmasq ensure=running')
         result = apply_manifest_on(host, manifest, :catch_failures => true).stdout
-
         expect(result).to_not match(/stopped.*'dnsmasq/)
       end
     end
